디자인 넣어야하고 컨택트 만들어야 함

--- a/index.html
+++ b/index.html
@@ -225,7 +225,45 @@
         <!-- 프롬헤라스 -->
         <!-- //section5 -->
 
+        <!-- section6 -->
+        <!-- 국립현대미술관 -->
+        <section id="section6">
+            <div class="mokup_area" data-aos="fade-up" data-aos-duration="1000">
+                <div class="mokup">
+                    <figure class="mokups">
+                        <img src="img/art_galley_pc.png" alt="봉주르 pc">
+                    </figure>
+                </div>
+                <div class="text_area">
+                    <h3>국립현대미술관 <span>(PC)</span></h3>
+                    <p>
+                        이 프로젝트에서는 ANTENNA 소속 아티스트의 음악과 이미지를 중심으로 웹사이트 디자인을 구성했습니다.
+                    </p>
+                    <p>
+                        디자인 과정에서는 자바스크립트와 CSS를 활용하여,
+                        소속사의 로고가
+                        회전하는 로딩 화면과 탭메뉴, 회전하는 LP판 애니메이션을 구현했습니다. 이러한 기능적 요소들은 사용자에게 지루함을 덜어주고, 웹사이트 방문 시 더 흥미롭고
+                        즐거운
+                        경험을 제공하기
+                        위해 추가되었습니다.
+                    </p>
+                    <h4>기술 스택</h4>
+                    <span>#HTML</span>
+                    <span>#CSS</span>
+                    <span>#JavaScript</span>
+                    <span>#jQuery</span>
+                    <h4>기여도</h4>
+                    <span>#퍼블리싱 100%</span>
+                    <a href="https://seongjongju.github.io/bonjour.paris/" target="_blank">VIEW</a>
+                    <a href="https://github.com/seongjongju/bonjour.paris.git" target="_blank">CODE</a>
+                </div>
+            </div>
+        </section>
+        <!-- 국립현대미술관 -->
+        <!-- //section6 -->
     </div>
+
+    <script src="js/seongjongju.js"></script>
 
     <script>
         /* aos애니메이션 */
