퍼블리싱 작업물 수정중

--- a/index2.html
+++ b/index2.html
@@ -118,7 +118,7 @@
             <h2 class="fs60">DESIGN</h2>
             <div class="design_project inner">
                 <!-- Swiper -->
-                <div class="swiper design_Swiper">
+                <div class="swiper design_Swiper" data-aos="fade-up" data-aos-duration="1000">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <img src="img/1_메인페이지.png" alt="">
@@ -179,7 +179,7 @@
                 <!-- Swiper -->
 
                 <!-- 텍스트 -->
-                <div class="design_text">
+                <div class="design_text" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
                     <p class="fs25">
                         경복궁 모바일 디자인 조별 프로젝트
                     </p>
@@ -205,11 +205,15 @@
         <!-- design2 -->
         <section id="design2">
             <div class="design2Area inner">
-                <img src="img/Gyeongbokgung_pc.png" alt="" class="design2_img1">
-                <img src="img/Gyeongbokgung_Tblit.png" alt="" class="design2_img2">
-                <img src="img/Gyeongbokgung_pc_mokup .png" alt="" class="mokup1">
-                <img src="img/Gyeongbokgung_tablit_mokup.png" alt="" class="mokup2">
-                <div class="design2_text">
+                <img src="img/Gyeongbokgung_pc.png" alt="" class="design2_img1" data-aos="fade-up"
+                    data-aos-duration="1000">
+                <img src="img/Gyeongbokgung_Tblit.png" alt="" class="design2_img2" data-aos="fade-up"
+                    data-aos-duration="1000" data-aos-delay="200">
+                <img src="img/Gyeongbokgung_pc_mokup .png" alt="" class="mokup1" data-aos="fade-up"
+                    data-aos-duration="1000" data-aos-delay="400">
+                <img src="img/Gyeongbokgung_tablit_mokup.png" alt="" class="mokup2" data-aos="fade-up"
+                    data-aos-duration="1000" data-aos-delay="600">
+                <div class="design2_text" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="800">
                     <p class="fs25">경복궁 메인페이지 디자인</p>
                     <p class="fs16">
                         경복궁 모바일 디자인 이후, 개별 과제로 PC와 태블릿 버전의 메인 페이지를 디자인하면서, 다양한 해상도에 맞춘 시각적 일관성을 유지하는 데 중점을 두었습니다.
@@ -222,8 +226,76 @@
         </section>
         <!-- design2 -->
 
-        
+        <!-- publishing -->
+        <section id="publishing">
+            <h2 class="fs60">PUBLISHING</h2>
+            <div class="publishing_area inner2">
+                <figure class="mokups">
+                    <img src="img/antenna.png" alt="안테나 pc">
+                </figure>
+                <div class="publishing_text">
+                    <h3 class="fs30">Antenna Music <span class="fs16">(PC, TABLET, MOBILE)</span></h3>
+                    <p class="fs18">
+                        이 프로젝트에서는 ANTENNA 소속 아티스트의 음악과 이미지를 중심으로 웹사이트 디자인을 구성했습니다.
+                    </p>
+                    <p class="fs18">
+                        디자인 과정에서는 자바스크립트와 CSS를 활용하여,
+                        소속사의 로고가
+                        회전하는 로딩 화면과 탭메뉴, 회전하는 LP판 애니메이션을 구현했습니다. 이러한 기능적 요소들은 사용자에게 지루함을 덜어주고, 웹사이트 방문 시 더 흥미롭고
+                        즐거운
+                        경험을 제공하기
+                        위해 추가되었습니다.
+                    </p>
+                    <h4 class="fs21">기술 스택</h4>
+                    <span>#HTML</span>
+                    <span>#CSS</span>
+                    <span>#JavaScript</span>
+                    <span>#jQuery</span>
+                    <h4 class="fs21">기여도</h4>
+                    <span>#퍼블리싱 100%</span>
+                    <div class="code">
+                        <a href="https://seongjongju.github.io/antenna/" target="_blank">VIEW</a>
+                        <a href="https://github.com/seongjongju/antenna.git" target="_blank">CODE</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+         <!-- publishing -->
 
+         <!-- publishing2 -->
+         <section id="publishing2">
+            <div class="publishing_area inner2">
+                <figure class="mokups">
+                    <img src="img/bonjour_pc.png" alt="봉주르파리 pc">
+                </figure>
+                <div class="publishing_text">
+                    <h3 class="fs30">Bonjour.Paris Eshop <span class="fs16">(PC)</span></h3>
+                    <p class="fs18">
+                        이 프로젝트에서는 ANTENNA 소속 아티스트의 음악과 이미지를 중심으로 웹사이트 디자인을 구성했습니다.
+                    </p>
+                    <p class="fs18">
+                        디자인 과정에서는 자바스크립트와 CSS를 활용하여,
+                        소속사의 로고가
+                        회전하는 로딩 화면과 탭메뉴, 회전하는 LP판 애니메이션을 구현했습니다. 이러한 기능적 요소들은 사용자에게 지루함을 덜어주고, 웹사이트 방문 시 더 흥미롭고
+                        즐거운
+                        경험을 제공하기
+                        위해 추가되었습니다.
+                    </p>
+                    <h4 class="fs21">기술 스택</h4>
+                    <span>#HTML</span>
+                    <span>#CSS</span>
+                    <span>#JavaScript</span>
+                    <span>#jQuery</span>
+                    <h4 class="fs21">기여도</h4>
+                    <span>#퍼블리싱 100%</span>
+                    <div class="code">
+                        <a href="https://seongjongju.github.io/antenna/" target="_blank">VIEW</a>
+                        <a href="https://github.com/seongjongju/antenna.git" target="_blank">CODE</a>
+                    </div>
+                </div>
+            </div>
+         </section>
+         <!-- publishing2 -->
     </div>
 
     <!-- Swiper JS -->
