데스크탑 최종

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEONG JONG JU</title>
+    <title>성종주 웹 포트폴리오</title>
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -28,9 +28,9 @@
             <nav>
                 <a href="#home">HOME</a>
                 <a href="#about">ABOUT ME</a>
-                <a href="#design">Design PROJECT</a>
-                <a href="#">Publishing PROJECT</a>
-                <a href="#">CONTACT</a>
+                <a href="#design">DESIGN</a>
+                <a href="#publishing">PUBLISHING</a>
+                <a href="#contact">CONTACT</a>
             </nav>
         </header>
         <!-- header -->
@@ -234,36 +234,20 @@
                     <img src="img/antenna.png" alt="안테나 pc">
                 </figure>
                 <div class="publishing_text" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
-                    <h3 class="fs30">Antenna Music <span class="fs16">(PC, TABLET, MOBILE)</span></h3>
+                    <h3 class="fs40">Antenna Music <span class="fs16">(PC, TABLET, MOBILE)</span></h3>
                     <p class="fs16">
-                        이 프로젝트에서는 직접 디자인부터 퍼블리싱까지 진행한 프로젝트입니다.  <br>
-                        디자인 과정에서 자바스크립트와 CSS를 활용하여 소속사의 로고가 회전하는 로딩 화면, 탭 메뉴, 그리고 회전하는 LP판 애니메이션을 구현했습니다. 이러한 기능적 요소들은
-                        사용자가 지루함을 느끼지 않도록 하여, 웹사이트 방문 시 더욱 흥미롭고 즐거운 경험을 제공하기 위해 설계되었습니다. <br>
-                        또한, 상단 헤더를 고정하여 사용자 편의성을 높였고, #SHORTS 페이지는 반응형 디자인을 적용하여 실제 유튜브 숏츠 영상을 보는 듯한 몰입감을 느낄 수 있도록
-                        구현하였습니다.
+                        본 프로젝트는 디자인부터 웹 퍼블리싱까지 전 과정을 혼자서 직접 진행한 개인 작업입니다.
                     </p>
-                    <h4 class="fs21">기술 스택</h4>
-                    <span>#HTML</span>
-                    <span>#CSS</span>
-                    <span>#JavaScript</span>
-                    <span>#jQuery</span>
-                    <span>renewal Design</span>
-                    <span>Responsive Design</span>
-                    <h4 class="fs21">작업범위</h4>
-                    <span>#HOME</span>
-                    <span>#ABOUT</span>
-                    <span>#ARTIST</span>
-                    <span>#ARTIST 개별 페이지</span>
-                    <span>#CONTACT</span>
-                    <span>#SHORTS</span>
-                    <h4 class="fs21">주요기능</h4>
-                    <span>#Figma</span>
-                    <span>#로딩화면</span>
-                    <span>#Swiper</span>
-                    <span>#탭메뉴</span>
+                    <p class="fs16">
+                        기존 사이트와 다르게 디자인하여 작업한 프로젝트입니다.
+                    </p>
+                    <p class="fs16">
+                        데스크탑부터 모바일까지 다양한 디바이스 환경에서 원활하게 실행될 수 있도록 반응형 웹 작업을 포함하여, 사용자 경험을 고려한 최적화된 설계를 반영하였습니다.
+                    </p>
                     <div class="code">
                         <a href="https://seongjongju.github.io/antenna/" target="_blank">VIEW</a>
                         <a href="https://github.com/seongjongju/antenna.git" target="_blank">CODE</a>
+                        <a href="learnmore_antenna.html" target="_blank">자세히보기</a>
                     </div>
                 </div>
             </div>
@@ -277,24 +261,17 @@
                     <img src="img/art_galley_pc.png" alt="국립현대미술관 pc">
                 </figure>
                 <div class="publishing_text" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                    <h3 class="fs30">국립현대미술관 <span class="fs16">(PC, TABLET, MOBILE)</span></h3>
+                    <h3 class="fs40">국립현대미술관 <span class="fs16">(PC, TABLET, MOBILE)</span></h3>
                     <p class="fs16">
-                        국립현대미술관의 웹사이트를 클론 코딩하여, 실제 사이트의 구조와 디자인을 분석하고 구현했습니다. 이 프로젝트를 통해 웹 개발의 기본 원리와 디자인 요소에 대한 이해를 심화할 수 있었습니다.
+                        국립현대미술관의 웹사이트를 클론 코딩하여, 실제 사이트의 구조와 디자인을 분석하고 구현했습니다.
                     </p>
-                    <h4 class="fs21">기술 스택</h4>
-                    <span>#HTML</span>
-                    <span>#CSS</span>
-                    <span>#JavaScript</span>
-                    <span>#jQuery</span>
-                    <span>Responsive</span>
-                    <h4 class="fs21">작업범위</h4>
-                    <span>#HOME</span>
-                    <span>#관람·참여 > 서울</span>
-                    <span>#관람·참여 > 과천</span>
-                    <span>#소장품 > 소장품검색</span>
+                    <p class="fs16">
+                        데스크탑부터 모바일까지 다양한 디바이스 환경에서 원활하게 실행될 수 있도록 반응형 웹 작업을 진행하였습니다.
+                    </p>
                     <div class="code">
                         <a href="https://seongjongju.github.io/Museum-of-Modern-Art/" target="_blank">VIEW</a>
                         <a href="https://github.com/seongjongju/Museum-of-Modern-Art.git" target="_blank">CODE</a>
+                        <a href="learnmore_musium.html" target="_blank">자세히보기</a>
                     </div>
                 </div>
             </div>
@@ -308,28 +285,20 @@
                     <img src="img/bonjour_pc.png" alt="봉주르파리 pc">
                 </figure>
                 <div class="publishing_text" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
-                    <h3 class="fs30">Bonjour.Paris Eshop <span class="fs16">(PC)</span></h3>
+                    <h3 class="fs40">Bonjour.Paris Eshop <span class="fs16">(PC)</span></h3>
                     <p class="fs16">
-                        이 프로젝트에서는 ANTENNA 소속 아티스트의 음악과 이미지를 중심으로 웹사이트 디자인을 구성했습니다.
+                        Bonjour.Paris Eshop 웹 사이트를 클론 코딩하며 독특하고 도전적인 디자인 요소를 분석하고 구현하였습니다.
                     </p>
+                    <P class="fs16">
+                        쇼핑몰의 핵심 기능을 구현하면서, 직관적이면서도 시각적으로 매력적인 UI/UX를 재현하는 데 주력하였습니다.
+                    </P>
                     <p class="fs16">
-                        디자인 과정에서는 자바스크립트와 CSS를 활용하여,
-                        소속사의 로고가
-                        회전하는 로딩 화면과 탭메뉴, 회전하는 LP판 애니메이션을 구현했습니다. 이러한 기능적 요소들은 사용자에게 지루함을 덜어주고, 웹사이트 방문 시 더 흥미롭고
-                        즐거운
-                        경험을 제공하기
-                        위해 추가되었습니다.
+                        
                     </p>
-                    <h4 class="fs21">기술 스택</h4>
-                    <span>#HTML</span>
-                    <span>#CSS</span>
-                    <span>#JavaScript</span>
-                    <span>#jQuery</span>
-                    <h4 class="fs21">기여도</h4>
-                    <span>#퍼블리싱 100%</span>
                     <div class="code">
                         <a href="https://seongjongju.github.io/bonjour.paris/" target="_blank">VIEW</a>
                         <a href="https://github.com/seongjongju/bonjour.paris.git" target="_blank">CODE</a>
+                        <a href="learnmore_bongjur.html" target="_blank">자세히보기</a>
                     </div>
                 </div>
             </div>
@@ -350,33 +319,17 @@
                     <img src="img/fromheras_pc.png" alt="프롬헤라스 pc">
                 </figure>
                 <div class="publishing_text" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                    <h3 class="fs30">프롬헤라스 <span class="fs16">(PC)</span></h3>
+                    <h3 class="fs40">프롬헤라스 <span class="fs16">(PC)</span></h3>
                     <p class="fs16">
-                        이 프로젝트에서는 ANTENNA 소속 아티스트의 음악과 이미지를 중심으로 웹사이트 디자인을 구성했습니다.
+                        프롬헤라스 웹 사이트를 클론 코딩하며 독특한 가로 스크롤 방식의 웹 사이트를 구현하였습니다.
                     </p>
                     <p class="fs16">
-                        디자인 과정에서는 자바스크립트와 CSS를 활용하여,
-                        소속사의 로고가
-                        회전하는 로딩 화면과 탭메뉴, 회전하는 LP판 애니메이션을 구현했습니다. 이러한 기능적 요소들은 사용자에게 지루함을 덜어주고, 웹사이트 방문 시 더 흥미롭고
-                        즐거운
-                        경험을 제공하기
-                        위해 추가되었습니다.
+                        프롬헤라스는 가로로 자연스럽게 스크롤되며, 사용자에게 색다른 인터랙티브 경험과 즐거움을 제공합니다. 이러한 작업을 통해 사용자 경험(UX)과 시각적 요소가 조화롭게 어우러진 웹 디자인을 완성하였습니다. 
                     </p>
-                    <h4 class="fs21">기술 스택</h4>
-                    <span>#HTML</span>
-                    <span>#CSS</span>
-                    <span>#JavaScript</span>
-                    <span>#jQuery</span>
-                    <h4 class="fs21">작업범위</h4>
-                    <span>#HOME</span>
-                    <span>#ABOUT</span>
-                    <span>#ARTIST</span>
-                    <span>#ARTIST 개별 페이지</span>
-                    <span>#CONTACT</span>
-                    <span>#SHORTS</span>
                     <div class="code">
                         <a href="https://seongjongju.github.io/fromheras/" target="_blank">VIEW</a>
                         <a href="https://github.com/seongjongju/fromheras.git" target="_blank">CODE</a>
+                        <a href="learnmore_fromheras.html" target="_blank">자세히보기</a>
                     </div>
                 </div>
             </div>
