--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive_style.css" media="screen and (max-width: 1600px)">
 
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
@@ -31,8 +32,10 @@
                 <a href="#design">DESIGN</a>
                 <a href="#publishing">PUBLISHING</a>
                 <a href="#contact">CONTACT</a>
+                <a href="#" class="closeBtn">CLOSE</a>
             </nav>
         </header>
+        <a href="#" class="openBtn">OPEN</a>
         <!-- header -->
 
         <!-- home -->
