--- a/learnmore_fromheras.html
+++ b/learnmore_fromheras.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive_style.css">
 
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
 </head>
