--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <p>전산회계1급</p>
                             <p>컴퓨터활용능력1급</p>
                             <p>정보기술자격ITQ</p>
-                            <p>생산자동회기능사</p>
+                            <p>생산자동화기능사</p>
                             <p>컴퓨터응용밀링기능사</p>
                         </div>
                     </div>
