--- a/learnmore_antenna.html
+++ b/learnmore_antenna.html
@@ -10,13 +10,14 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive_learnmore.css" media="screen and (max-width: 1000px)">
 
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
 </head>
 <body>
 <div id="wrap">
   <div class="container inner3">
-    <img src="https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcHKStJ%2FbtrfmOSF2DJ%2FPYLJUYDk9dT007wnHO2ZvK%2Fimg.jpg" alt="">
+    <img src="img/antenna.jfif" alt="">
     <!-- 제목 및 개요 -->
     <h1 class="fs60">Antenna Music 반응형 웹 사이트</h1>
     <h2 class="fs30">
