--- a/learnmore_bongjur.html
+++ b/learnmore_bongjur.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive_learnmore.css" media="screen and (max-width: 1000px)">
 
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
 </head>
@@ -17,7 +18,7 @@
 <body>
     <div id="wrap">
         <div class="container inner3">
-            <img src="https://images.prismic.io/bonjour-eshop/ccdb8b17-373b-41c4-82cd-3df7c1ffd021_bonjour_eshop_cover.jpg?auto=compress,format" alt="">
+            <img src="img/bonjour.avif" alt="">
             <!-- 제목 및 개요 -->
             <h1 class="fs60">Bonjour.Paris Eshop 웹 사이트</h1>
             <h2 class="fs30">
