--- a/learnmore_fromheras.html
+++ b/learnmore_fromheras.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive_style.css">
+    <link rel="stylesheet" href="css/responsive_learnmore.css" media="screen and (max-width: 1000px)">
 
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
 </head>
@@ -18,7 +19,7 @@
 <body>
     <div id="wrap">
         <div class="container inner3">
-            <img src="https://cdn-pro-web-215-6.cdn-nhncommerce.com/fromheras_godomall_com/data/skin/mobile/moment/webi/img/card1_img1.png" alt="">
+            <img src="img/fromheras.png" alt="">
             <!-- 제목 및 개요 -->
             <h1 class="fs60">프롬헤라스 웹 사이트</h1>
             <h2 class="fs30">
