--- a/learnmore_musium.html
+++ b/learnmore_musium.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive_learnmore.css" media="screen and (max-width: 1000px)">
 
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
 </head>
@@ -17,8 +18,7 @@
 <body>
     <div id="wrap">
         <div class="container inner3">
-            <img src="https://lh3.googleusercontent.com/pTVB6QivE2ujByqz6IS_Bd-gknG3XsP3UWsQjQZWFYYTZm9hjOqsdbyxwUiXQgH8ukt-1Z0dj_Up1U6brx-dQx8nh9BxW-as01WyILWvAVVPha5nIhrx=w1920-h960-n"
-                alt="">
+            <img src="img/unnamed.gif" alt="">
             <!-- 제목 및 개요 -->
             <h1 class="fs60">국립현대미술관 반응형 웹 사이트</h1>
             <h2 class="fs30">
