--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <p>GTQ(그래픽기술자격)1급</p>
                             <p>전산회계1급</p>
                             <p>컴퓨터활용능력1급</p>
-                            <p>정보기술자격ITQ</p>
+                            <p>정보기술자격ITQ 마스터</p>
                             <p>생산자동화기능사</p>
                             <p>컴퓨터응용밀링기능사</p>
                         </div>
