반응형 디자인 수정, 탑 이동 버튼 추가, 모바일 사이즈 헤더 수정

--- a/index.html
+++ b/index.html
@@ -359,6 +359,12 @@
             <p class="copy fs16">
                 Created with passion by SeongJongJu. © 2023 All rights reserved
             </p>
+
+        <!-- topBtn -->
+         <a href="#" class="topBtn">
+           GO TO TOP
+         </a>
+         <!-- topBtn -->
         </section>
         <!-- contact -->
     </div>
