와이어프레임 추가

--- a/index.html
+++ b/index.html
@@ -194,8 +194,10 @@
                     </p>
                     <p class="fs18">
                         조별과제 진행 중 팀원 간의 소통이 원활하지 않아 작업이 겹치거나 추가된 내용을 전달받지 못하는 상황이 발생했습니다. 그러나 작업 중간에 정리하는 시간을 마련함으로써 이러한
-                        문제를 극복해 나갈 수 있었습니다. 이 과정에서 협업의 중요성과 팀워크를 통해 한 프로젝트를 완성해 나가는 경험을 배울 수 있었습니다.
+                        문제를 극복해 나갈 수 있었고, 피그마 쉐어 기능을 이용해 더 원할하게 협업할 수 있다는 것을 배울 수 있었습니다. 이 과정에서 협업의 중요성과 팀워크를 통해 한 프로젝트를 완성해 나가는 경험을 할 수 있었습니다.
                     </p>
+
+                    <a href="https://www.figma.com/design/g3JoUGjzAdq9BP3kMp6z6T/%EA%B2%BD%EB%B3%B5%EA%B6%81?node-id=0-1&m=dev&t=Ii9DjYN0yNvM3NW0-1" target="_blank" class="fs21 figmaView">와이어프레임 보러가기</a>
                 </div>
                 <!-- 텍스트 -->
             </div>
@@ -222,6 +224,7 @@
                     <p class="fs16">
                         포토샵을 활용해 각 디바이스에 최적화된 디자인을 제작했으며, 사용자 인터페이스(UI)의 디테일과 편리한 사용자 경험(UX)을 고려한 배치를 통해 디자인 완성도를 높였습니다.
                     </p>
+                    <a href="https://www.figma.com/design/g3JoUGjzAdq9BP3kMp6z6T/%EA%B2%BD%EB%B3%B5%EA%B6%81?node-id=136-2&m=dev&t=Ii9DjYN0yNvM3NW0-1" target="_blank" class="fs21 figmaView">와이어프레임 보러가기</a>
                 </div>
             </div>
         </section>
