--- a/learnmore_antenna.html
+++ b/learnmore_antenna.html
@@ -35,9 +35,10 @@
      <h2 class="fs30">
         작업 기간
      </h2>
-     <p class="fs21">
-        · 디자인 1주
+     <p class="fs21 designView">
+        · 디자인 1주 ->
      </p>
+     <a href="https://www.figma.com/design/f3Xo114UOYQ0PqfuTK9k3t/ANTANNA?node-id=0-1&m=dev&t=jtSa81FMWXjpBAzP-1" target="_blank" class="fs18 learnView">와이어프레임 보러가기</a>
      <p class="fs21">
         · 퍼블리싱 3주
      </p>
@@ -131,6 +132,9 @@
      <h2 class="fs30">
         개선 및 배운점
      </h2>
+     <p class="fs21">
+        피그마 오토 레이아웃 기능을 통해 보다 효율적으로 레이아웃을 배치하는 방법과, 컴포넌트 기능을 이용한 수정사항을 일괄적으로 수정할 수있는 방법을 배울 수 있었습니다.
+    </p>
      <p class="fs21">
         스와이퍼 플러그인을 통해 여러 콘텐츠를 효율적으로 배치하는 방법을 익혔습니다. 이를 통해 다양한 전환 효과와 반응형 디자인을 쉽게 구현할 수 있었습니다.
     </p>
