텍스트 수정

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <h2 data-aos="fade-up" data-aos-duration="1000">
                 JONGJU's <span>WEB PORTFOLIO</span>
             </h2>
-            <p class="intro fs21" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+            <!-- <p class="intro fs21" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                 저는 계속 배우고 성장하면서, 직관적인 웹사이트를 만들어가고 있어요. 새로운 도전과 기술에 열정을 쏟으며, 창의적이고 효율적인 퍼블리싱을 목표로 하고 있죠. 앞으로도 제 작업이 더 나은
                 웹 환경에 기여할 수 있길 기대하고 있습니다.
-            </p>
+            </p> -->
         </section>
         <!-- home -->
 
@@ -62,7 +62,7 @@
                     <p class="fs18">
                         엠비씨컴퓨터아카데미에서 웹 퍼블리셔로서 기초를 다지고 실무 기술을 익힌 성종주입니다. 처음에는 디자인 직무를 목표로 학원에 다녔지만, HTML, CSS,
                         JavaScript를
-                        활용하여 웹사이트를 구축하고 다양한 디자인 툴을 사용하면서 퍼블리싱에 대한 애정과 열정을 갖게 되었습니다.
+                        활용하여 웹사이트를 구축하고 다양한 예제를 연습하면서 퍼블리싱에 대한 애정과 열정을 갖게 되었습니다.
                     </p>
                     <p class="fs18">
                         "엠비씨컴퓨터아카데미에서 배운 실무 지식과 퍼블리싱에 대한 열정을 바탕으로, 끊임없이 성장하며 새로운 도전을 즐기는 신입 웹 퍼블리셔가 되겠습니다."
@@ -73,7 +73,7 @@
                     </div>
                     <div class="Certificates">
                         <strong>CERTIFICATES</strong>
-                        <div class="fs14">
+                        <div class="fs16">
                             <p>사회복지사2급</p>
                             <p>자동차운전면허증 2종보통</p>
                             <p>ERP인사정보관리사1급</p>
@@ -252,6 +252,7 @@
                         <a href="https://seongjongju.github.io/antenna/" target="_blank">VIEW</a>
                         <a href="https://github.com/seongjongju/antenna.git" target="_blank">CODE</a>
                         <a href="learnmore_antenna.html" target="_blank">자세히보기</a>
+                        <a href="https://www.figma.com/design/f3Xo114UOYQ0PqfuTK9k3t/ANTANNA?node-id=0-1&m=dev&t=GDbH7UPg42emzCsD-1" target="_blank" class="antennaFigma">와이어프레임 보러가기</a>
                     </div>
                 </div>
             </div>
