--- a/learnmore_antenna.html
+++ b/learnmore_antenna.html
@@ -24,7 +24,7 @@
         본 프로젝트는 디자인부터 웹 퍼블리싱까지 전 과정을 혼자서 직접 진행한 개인 작업입니다.
     </p>
     <p class="fs21">
-        기존 사이트와 다르게 디자인하여 작업한 프로젝트입니다.
+        제가 좋아하는 아티스트들이 소속된 엔터테인먼트라서 자연스럽게 관심이 갔던 사이트입니다. 다른 엔터테인먼트 사이트들과 비교했을 때, 아티스트들의 개성이 잘 드러난다고 느꼈고, 그런 점에서 매력을 많이 느꼈습니다. 그래서 제 생각을 담아, 그 매력을 더 돋보이게 하는 방향으로 사이트를 리뉴얼해 보고 싶었습니다.
     </p>
     <p class="fs21">
         데스크탑부터 모바일까지 다양한 디바이스 환경에서 원활하게 실행될 수 있도록 반응형 웹 작업을 포함하여, 사용자 경험을 고려한 최적화된 설계를 반영하였습니다.
@@ -35,10 +35,9 @@
      <h2 class="fs30">
         작업 기간
      </h2>
-     <p class="fs21 designView">
-        · 디자인 1주 ->
+     <p class="fs21">
+        · 디자인 1주
      </p>
-     <a href="https://www.figma.com/design/f3Xo114UOYQ0PqfuTK9k3t/ANTANNA?node-id=0-1&m=dev&t=jtSa81FMWXjpBAzP-1" target="_blank" class="fs18 learnView">와이어프레임 보러가기</a>
      <p class="fs21">
         · 퍼블리싱 3주
      </p>
@@ -89,6 +88,9 @@
     </p>
     <p class="fs21">
         · Responsive Design
+    </p>
+    <p class="fs21">
+        · GitHub
     </p>
     <!-- 기술 스택 -->
 
@@ -142,7 +144,7 @@
         탭 메뉴를 사용하여 정보의 가독성을 높이고, 사용자들이 원하는 정보를 쉽게 찾을 수 있도록 하는 방법을 배웠습니다.
     </p>
     <p class="fs21">
-        모바일 환경에서의 사용자 경험을 고려해야 한다는 점을 다시 한 번 인식하게 되었습니다. 다양한 화면 크기에서 콘텐츠가 잘 보이도록 하는 것이 얼마나 중요한지를 깨달았습니다.
+        데스크탑 사이즈를 구현할 때 반응형 디자인을 고려해야 한다는 것을 배울 수 있었습니다. 특히 ARTIST 개별 페이지의 앨범 소개 탭 부분에서 마우스를 오버하면 LP판이 오른쪽으로 슬라이드되는 효과를 주었는데, 반응형 작업을 하면서 위치값의 변동이 심해 어려움을 많이 겪었습니다.
     </p>
     <!-- 개선 및 배운점 -->
   </div>
