--- a/learnmore_bongjur.html
+++ b/learnmore_bongjur.html
@@ -27,6 +27,9 @@
             <p class="fs21">
                 쇼핑몰의 핵심 기능을 구현하면서, 직관적이면서도 시각적으로 매력적인 UI/UX를 재현하는 데 주력하였습니다.
             </p>
+            <p class="fs21">
+                쇼핑몰의 핵심 기능 중 하나인 정렬 기능을 구현하기 위해 학습이 필요했고, 평소 관심 있게 보던 해외 쇼핑몰 사이트를 클론 코딩해 보았습니다. 원래는 가격별 정렬과 체크박스 change 이벤트가 발생할 때의 정렬 기능까지 모두 구현하려 했으나, 현재는 sort 함수를 이용해 가격 정렬 기능까지만 구현한 상태입니다. 
+            </p>
             <!-- 제목 및 개요 -->
 
             <!-- 작업 기간 -->
@@ -72,6 +75,9 @@
             <p class="fs21">
                 · jquery
             </p>
+            <p class="fs21">
+                · GitHub
+            </p>
             <!-- 기술 스택 -->
 
             <!-- 기여도 -->
@@ -108,10 +114,10 @@
                 개선 및 배운점
             </h2>
             <p class="fs21">
-                GNB에서 마우스 오버 효과를 사용함으로써 사용자와의 상호작용을 통해 디자인의 매력을 높일 수 있다는 것을 깨달았습니다.
+                GNB에서 마우스 오버 효과를 사용함으로써 사용자와의 상호작용을 통해 디자인의 매력을 높일 수 있는 것과 동시에 사이트의 내비게이션과 같은 효과를 줄 수 있었습니다.
             </p>
             <p class="fs21">
-                쇼핑몰에서 사용자 편의성을 높이는 다양한 기능(가격별 정렬, 선택 및 계산 기능)의 중요성을 배웠습니다.
+                쇼핑몰에서 사용자 편의성을 높이기 위한 다양한 기능(가격별 정렬, 선택 및 계산 기능)을 직접 구현하면서 sort 함수의 사용법을 익힐 수 있었습니다. 다만, 체크박스에 따른 정렬 기능을 구현하지 못한 점은 아쉬움으로 남습니다.
             </p>
             <!-- 개선 및 배운점 -->
         </div>
