--- a/learnmore_fromheras.html
+++ b/learnmore_fromheras.html
@@ -26,7 +26,10 @@
                 프롬헤라스 웹 사이트를 클론 코딩하며 독특한 가로 스크롤 방식의 웹 사이트를 구현하였습니다.
             </p>
             <p class="fs21">
-                프롬헤라스는 가로로 자연스럽게 스크롤되며, 사용자에게 색다른 인터랙티브 경험과 즐거움을 제공합니다. 이러한 작업을 통해 사용자 경험(UX)과 시각적 요소가 조화롭게 어우러진 웹 디자인을 완성하였습니다. 
+                문서를 왼쪽에서부터 오른쪽으로 읽어 가듯이 웹 사이트도 왼쪽에서 오른쪽으로 이동하면 어떨까?라는 생각에서 시작하여 클론코딩을 하게 되었습니다. 
+            </p>
+            <p class="fs21">
+                프롬헤라스는 가로로 자연스럽게 스크롤되며, 사용자에게 색다른 인터랙티브 경험과 즐거움을 제공합니다. 섹션이 변경될 때마다 AOS 플러그인을 활용한 애니메이션이 나타나도록 구현했습니다. 이러한 작업을 통해 사용자 경험(UX)과 시각적 요소가 조화롭게 어우러진 웹 디자인을 완성하였습니다. 
             </p>
             <!-- 제목 및 개요 -->
 
@@ -64,6 +67,9 @@
             <p class="fs21">
                 · jquery
             </p>
+            <p class="fs21">
+                · GitHub
+            </p>
             <!-- 기술 스택 -->
 
             <!-- 기여도 -->
@@ -80,7 +86,10 @@
                 주요기능
             </h2>
             <p class="fs21 title">
-                메인페이지 <br><span class="fs18">· 실제 사이트와 유사한 레이아웃을 구현하였으며, 가로로 이동하면서 다양한 애니메이션 효과를 통해 사용자에게 즐거움을 제공합니다.</span>
+                메인페이지 <br><span class="fs18">· 실제 사이트와 유사한 레이아웃을 구현하였으며, 가로로 이동하면서 fade-up, fade-down등의 다양한 애니메이션 효과를 통해 사용자에게 즐거움을 제공합니다.</span>
+            </p>
+            <p class="fs21 title">
+                GNB <br><span class="fs18">· 블러 효과와 fadeIn, fadeOut 효과를 활용하여 분리된 느낌이 아닌 자연스러운 사용자 경험을 제공합니다.</span>
             </p>
             <!-- 주요 기능 -->
 
@@ -89,10 +98,10 @@
                 개선 및 배운점
             </h2>
             <p class="fs21">
-                즐거운 애니메이션이 사용자 경험을 어떻게 향상시키는지를 깨달았습니다. 사용자에게 직관적이고 재미있는 환경을 제공하는 것이 중요함을 배웠습니다.
+                즐거운 애니메이션이 사용자에게 직관적이고 재미있는 환경을 제공하지만, 웹사이트 이용에 있어 큰 영향을 미치지는 않는 것 같습니다.
             </p>
             <p class="fs21">
-                다양한 애니메이션 효과가 웹사이트의 매력을 높일 수 있다는 점을 이해하게 되었고, 이를 통해 사용자의 몰입도를 높이는 방법을 익혔습니다.
+                다양한 애니메이션 효과가 웹사이트의 매력을 높일 수 있다는 점은 분명하지만, 무엇보다 사용자에게 정보를 정확히 전달하는 것이 우선이라는 것을 배웠습니다
             </p>
             <!-- 개선 및 배운점 -->
         </div>
