--- a/learnmore_musium.html
+++ b/learnmore_musium.html
@@ -25,6 +25,9 @@
                 국립현대미술관의 웹사이트를 클론 코딩하여, 실제 사이트의 구조와 디자인을 분석하고 구현한 작업입니다.
             </p>
             <p class="fs21">
+                Bonjour.Paris Eshop 사이트에서 구현하지 못한 체크박스에 따른 정렬 기능을 재도전하기 위해 선택했습니다. 또한, 깔끔한 디자인이 마음에 들어 클론 코딩을 진행하게 되었습니다.
+            </p>
+            <p class="fs21">
                 데스크탑부터 모바일까지 다양한 디바이스 환경에서 원활하게 실행될 수 있도록 반응형 웹 작업을 포함하여, 사용자 경험을 고려한 최적화된 설계를 반영하였습니다.
             </p>
             <!-- 제목 및 개요 -->
@@ -75,6 +78,9 @@
             <p class="fs21">
                 · Responsive Design
             </p>
+            <p class="fs21">
+                · GitHub
+            </p>
             <!-- 기술 스택 -->
 
             <!-- 기여도 -->
@@ -98,14 +104,14 @@
             </p>
             <p class="fs21 title">
                 소장품 <br> <span class="fs18">
-                    · 필터링 및 정렬 기능 추가하였습니다.
+                    상세 검색 부분에 탭 기능을 구현하고, createElement와 appendChild 함수를 이용해 사용자가 선택한 조건을 표시하는 기능을 구현했습니다. 또한, 체크박스 change 이벤트가 발생했을 때 해당 요소가 정렬되는 기능도 구현했습니다
                 </span>
             </p>
             <p class="fs21 title">
                 반응형 디자인 <br> <span class="fs18">· 다양한 기기에서 최적화된 사용자 경험 제공합니다.</span>
             </p>
             <p class="fs21 title">
-                반응형 GNB <br> <span class="fs18">· 모바일 환경에서 사용자가 편리하게 이용할 수 있도록 오른쪽에서 슬라이드 되는 기능을 구현하였으며, 하위 메뉴는 아코디언 메뉴로 구성하였습니다.</span>
+                반응형 GNB <br> <span class="fs18">· 모바일 환경에서 사용자가 편리하게 이용할 수 있도록 오른쪽에서 슬라이드되는 기능을 구현했습니다. 하위 메뉴는 아코디언 메뉴로 구성하였으며, 하위 메뉴가 나타날 때 아래 부분이 보이지 않는 문제가 발생했습니다. 이를 해결하기 위해 스크롤이 가능하도록 구현했습니다. </span>
             </p>
             <!-- 주요 기능 -->
 
@@ -114,13 +120,13 @@
                 개선 및 배운점
             </h2>
             <p class="fs21">
-                클론 코딩 과정에서 HTML과 CSS 구조의 중요성, 그리고 자바스크립트를 통한 동적 요소 구현의 필요성을 깊게 깨달았습니다.
+                클론 코딩을 통해 문서 구조화, CSS로 표현되는 디자인 스킬, 그리고 자바스크립트와 jQuery로 구현되는 동작이 정보 설계부터 체계적으로 이루어져야 가장 효율적이라는 것을 배웠습니다.
             </p>
             <p class="fs21">
-                중복 클래스를 활용하여 효율적인 퍼블리싱 방법을 익혔습니다.
+                무엇보다 철저한 분석 없이 클론 코딩을 진행했을 때, 재사용 클래스가 없어서 코드 리팩토링이 제대로 이루어지지 않는 문제를 수정하는 과정에서 앞으로 코드의 효용성에 대해 더 고민해야 한다는 것을 깨달았습니다.
             </p>
             <p class="fs21">
-                모바일 환경을 고려한 데스크탑 환경 구현의 중요성을 체감하게 되었습니다.
+                디바이스 환경의 다양성을 고려한 사용자 인터페이스는 사용자 경험과 직결된다는 점을 깊이 고민하며, 앞으로도 더욱 사용자 친화적인 디자인과 사용성을 최적화하는 데 힘쓰겠습니다.
             </p>
             <!-- 개선 및 배운점 -->
         </div>
