반응형 수정

--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
                     <p class="fs16">
                         본 프로젝트는 디자인부터 웹 퍼블리싱까지 전 과정을 혼자서 직접 진행한 개인 작업입니다.
                     </p>
-                    <p class="fs16">
+                   <!--  <p class="fs16">
                         기존 사이트와 다르게 디자인하여 작업한 프로젝트입니다.
-                    </p>
+                    </p> -->
                     <p class="fs16">
                         데스크탑부터 모바일까지 다양한 디바이스 환경에서 원활하게 실행될 수 있도록 반응형 웹 작업을 포함하여, 사용자 경험을 고려한 최적화된 설계를 반영하였습니다.
                     </p>
