안테나 피그마 링크수정

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                         <a href="https://seongjongju.github.io/antenna/" target="_blank">VIEW</a>
                         <a href="https://github.com/seongjongju/antenna.git" target="_blank">CODE</a>
                         <a href="learnmore_antenna.html" target="_blank">자세히보기</a>
-                        <a href="https://www.figma.com/design/f3Xo114UOYQ0PqfuTK9k3t/ANTANNA?node-id=0-1&m=dev&t=GDbH7UPg42emzCsD-1" target="_blank" class="antennaFigma">와이어프레임 보러가기</a>
+                        <a href="https://www.figma.com/design/f3Xo114UOYQ0PqfuTK9k3t/ANTANNA?node-id=0-1&t=P9lOfV0GOqwzEx7j-1" target="_blank" class="antennaFigma">와이어프레임 보러가기</a>
                     </div>
                 </div>
             </div>
